<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/rsz_fond_ecran_connexion">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/user"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/violetActivigo"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/mdp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/violetActivigo"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/seConnecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/zone_texte_bord_rond"
        android:backgroundTint="@color/violetActivigo"
        android:text="@string/go"
        android:textColor="@android:color/white"
        android:onClick="connectToApp"
        />

    <Button
        android:id="@+id/inscrire"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/zone_texte_bord_rond"
        android:onClick="inscriptionPage"
        android:text="@string/inscris" />
</LinearLayout>
</ScrollView>